Avance en perfil de usuario, avatar según género, botón de ir al perfil.

--- a/src/app/pages/reports/incidences-summary/incidences-summary.page.html
+++ b/src/app/pages/reports/incidences-summary/incidences-summary.page.html
@@ -5,7 +5,7 @@
         <ion-icon slot="start" name="chevron-back-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
-    <ion-title>Reporte de Inciencia</ion-title>
+    <ion-title class="ion-no-padding">Reporte de Inciencia</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="imprimir()" color="primary">
         <ion-icon slot="start" name="print-outline"></ion-icon>
